[package]
name = "whatismyip"
version = "0.13.12"
authors = ["Billie Thompson <billie@billiecodes.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://codeberg.org/PurpleBooth/whatismyip"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "dns", "ip", "resolve" ]
description = "Work out what your IP Address is"

[dependencies]
clap = { version = "4.5.28", features = ["derive", "cargo", "wrap_help", "env", "unicode"] }
hickory-resolver = "0.24.3"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
miette = { version = "7.5.0", features = ["fancy"] }
local-ip-address = "0.6.3"
