[package]
name = "whatismyip"
version = "0.17.0"
authors = ["Billie Thompson <billie@billiecodes.com>"]
edition = "2024"
license = "CC0-1.0"
repository = "https://codeberg.org/PurpleBooth/whatismyip"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "dns", "ip", "resolve" ]
description = "Work out what your IP Address is"

[lib]
name = "whatismyip"
path = "src/lib.rs"

[[bin]]
name = "whatismyip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive", "wrap_help", "env", "cargo", "color", "error-context", "help", "unicode", "usage", "string", "suggestions"] }
hickory-resolver = { version = "0.25.2", features = ["tokio", "tls-ring" ] }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "net", "sync", ] }
miette = { version = "7.6.0", features = ["fancy"] }
local-ip-address = "0.6.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = { version = "=0.7.0", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "ip_benchmarks"
path = "benches/ip_benchmarks.rs"
harness = false
